take out to files

--- a/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
+++ b/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
@@ -1,28 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyN5KSCOgMhkhCSAZDxMIbKh",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/PatMis16/linAlgGoogleColab/blob/main/linAlg_Codierungstheorie_Patrick_Mischler.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -30,18 +12,21 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4n5SRRnHp4TD"
+      },
       "source": [
         "# Codierungstheorie\n",
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "4n5SRRnHp4TD"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "IZf5CtQBqxy7"
+      },
       "source": [
         "## Einleitung in die Codierungstheorie\n",
         "\n",
@@ -62,13 +47,13 @@
         "Zudem wird hier die 3-fache Datenmenge übertragen, was dieses Verfahren nicht gerade effizient macht. \n",
         "\n",
         "Der amerikanische Mathematiker *Richard W. Hamming* hat für diesen Zweck eine einfache und doch effiziente Methode entwickelt welche *Hamming-Code* genannt wird. Der Einsatz reicht von der Fehlerprüfung bei der Datenübertragung im Netzwerk bis zu der Fehlererkennung in ECC-Speicherchips."
-      ],
-      "metadata": {
-        "id": "IZf5CtQBqxy7"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "BMehIYJDq6Ur"
+      },
       "source": [
         "## Theorieteil\n",
         "In diesem kurzen Theoriteil werden die wichtigsten Grundlagen zu *Hemming-Codes* beschrieben. Der *Hamming-Code* bezieht sich auf Binärziffern. Das bedeutet, wir bewegen uns um Körper $\\mathbb{Z}_2$ [[Weitz. 2018.]](zotero://select/items/_C9DWSI2S). Besteht ein Datenpaket nun aus 7 Zeichen, müssen 3 davon für das Prüfen und korrigieren verwendet werden, damit der Code funktioniert. Das Verhältnis von Nutzlast zu der Menge der übertragenen Daten ist bei diesem Beispiel eher schlecht. Allerdings verbessert sich das Verhältnis mit zunehmender Anzahl Zeichen (Bits), welche in einem Paket übermittelt werden.\n",
@@ -89,14 +74,11 @@
         "$$\n",
         "\n",
         "In Python kann diese Berechnung ebenfalls durchgeführt werden. Dazu wird die Bibliothek `numpy` mit den entsprechenden Funktionen für die Matrixmultiplikation verwendet. "
-      ],
-      "metadata": {
-        "id": "BMehIYJDq6Ur"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,8 +88,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[0 1 1 1]\n",
             "3\n",
@@ -132,6 +114,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "EE93P81JxhJB"
+      },
       "source": [
         "Die Vektoren können nun als **Codewort** bezeichtnet werden. Werden die Codewörter nun um ein Kontrollbit ergänzt [[Teschl. 2013]](zotero://select/items/_85KJXNKN), kann eine **Generatormatrix** erstellt werden. Die Generatormatrix besteht aus einer Einheitsmatrix. Die Einheitsmatix wird für die zu übertragende Nutzlast gebildet. Beispielsweise für 4 Bit:\n",
         "\n",
@@ -184,20 +169,11 @@
         "$$\n",
         "\n",
         "Dies lässt sich auch mit Python einfach nachvollziehen:"
-      ],
-      "metadata": {
-        "id": "EE93P81JxhJB"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "G = np.array([[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1], [1, 0, 1, 1], [1, 1, 0, 1], [0, 1, 1, 1]])\n",
-        "a = np.array([0, 0, 0, 0])\n",
-        "print(np.matmul(G, a))"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -205,19 +181,28 @@
         "id": "v4g7T_oA442N",
         "outputId": "bff5bfc7-1a1a-4de0-a8b1-eb5466f18e6c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[0 0 0 0 0 0 0]\n"
           ]
         }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "G = np.array([[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1], [1, 0, 1, 1], [1, 1, 0, 1], [0, 1, 1, 1]])\n",
+        "a = np.array([0, 0, 0, 0])\n",
+        "print(np.matmul(G, a))"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "_i3MJjzQ59co"
+      },
       "source": [
         "Tritt nun bei der Übertragung eines Codewortes ein Fehler auf, kann dies mithilfe einer Prüfmatrix $H$ (Check-Matrix) erkannt und korrigiert werden. Dazu wird eine Einheitsmatrix $I_k$ mit den Paritätsbits ergänzt. $k$ bezieht sich auf die Anzahl der Paritätsbits. Bei einer Nutzlast von 4 Bit ergeben sich 3 Paritätsbits, daher $I_3$. \n",
         "\n",
@@ -271,20 +256,11 @@
         "$$\n",
         "\n",
         "Auch das lässt sich wieder mit Python nacvollziehen. Wobei wir wieder beachten müssen, dass eine ungerade Zahl für $0$ steht und eine gerade Zahl für $1$."
-      ],
-      "metadata": {
-        "id": "_i3MJjzQ59co"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "H4 = np.array([[1, 0, 1, 1, 1, 0, 0], [1, 1, 0, 1, 0, 1, 0], [0, 1, 1, 1, 0, 0, 1]])\n",
-        "C = np.array([0, 1, 0, 1, 0, 1, 1])\n",
-        "print(np.matmul(H4, C))"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -292,19 +268,28 @@
         "id": "Ojv8e87B993X",
         "outputId": "55a4e395-c068-4ed3-d8e9-7dc819de81a5"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[1 3 3]\n"
           ]
         }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "H4 = np.array([[1, 0, 1, 1, 1, 0, 0], [1, 1, 0, 1, 0, 1, 0], [0, 1, 1, 1, 0, 0, 1]])\n",
+        "C = np.array([0, 1, 0, 1, 0, 1, 1])\n",
+        "print(np.matmul(H4, C))"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "aSgBYthYBiF_"
+      },
       "source": [
         "Beispiel mit Bit-Fehler im Codewort $C_f$\n",
         "\n",
@@ -334,20 +319,11 @@
         "$$\n",
         "\n",
         "Und wieder die entsprechende Berechnung in Python unter berücksichtigung der vorher genannten Bedingung, dass eine ungerade Zahl für $0$ steht und eine gerade Zahl für $1$."
-      ],
-      "metadata": {
-        "id": "aSgBYthYBiF_"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "H4 = np.array([[1, 0, 1, 1, 1, 0, 0], [1, 1, 0, 1, 0, 1, 0], [0, 1, 1, 1, 0, 0, 1]])\n",
-        "Cf = np.array([0, 1, 1, 1, 0, 1, 1])\n",
-        "print(np.matmul(H4, Cf))"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -355,52 +331,63 @@
         "id": "kSVlaF0ICH5Z",
         "outputId": "f95fd584-533c-40c1-a9d3-7cbe3131386f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[2 3 4]\n"
           ]
         }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "H4 = np.array([[1, 0, 1, 1, 1, 0, 0], [1, 1, 0, 1, 0, 1, 0], [0, 1, 1, 1, 0, 0, 1]])\n",
+        "Cf = np.array([0, 1, 1, 1, 0, 1, 1])\n",
+        "print(np.matmul(H4, Cf))"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Aus dem resultierenden Vektor $\\overrightarrow{z}$ ist nun nicht nur ersichtlich das ein Fehler aufgetreten ist, sondern auch an welcher Stelle dieser sich befindet. Der Binäre Wert des Vektors $overrightarrow{z}$ kann ausgewiertet werden: $0\\cdot 2^0 + 1\\cdot 2^1 + 1 \\cdot 2^2$ "
-      ],
       "metadata": {
         "id": "-C4loMNTN0Uo"
-      }
+      },
+      "source": [
+        "Aus dem resultierenden Vektor $\\overrightarrow{z}$ ist nun nicht nur ersichtlich das ein Fehler aufgetreten ist, sondern auch an welcher Stelle dieser sich befindet. Der Binäre Wert des Vektors $overrightarrow{z}$ kann ausgewiertet werden: $0\\cdot 2^0 + 1\\cdot 2^1 + 1 \\cdot 2^2$ "
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "UJrXgSuLTwHZ"
+      },
       "source": [
         "## Praktischer Teil\n",
         "\n",
         "Im ersten Teil wird eine Klass erstellt, mit dem sich für einen Hammincode, alle Notwendigen funktionen wie das Generieren einer Generator-Matrix und einer Prüfmatrix erstellen lässt.\n",
         "\n",
         "Der zweite Teil stellt das Hauptprogramm dar, in dem die Berechnungen durchgeführt werden.\n"
-      ],
-      "metadata": {
-        "id": "UJrXgSuLTwHZ"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "WTYsmZmhUW5K"
+      },
       "source": [
         "### Klasse HammingCode\n",
         "\n",
         "Die Klasse `HammingCode` besteht zum einen aus einem Konstruktor `__init__` in dem eine Instanz der Klasse (Objekt) mit den gegeben Angaben erzeugt wird. Der Konstruktor akzeptiert einen Parameter `k` mit dem die Anzahl Paritätsbits für das instanzierte `HemmingCode`-Objekt initialisiert wird. Bei der Initialisierung werden automatisch die Generatormatrix mit der Funktion `__construct_gen_matrix`, die Prüfmatrix mit der Funktion `__construct_chk_matrix` und die Decodierungs-Matrix mit der Funktion `__construct_encode_matrix()` erzeugt."
-      ],
-      "metadata": {
-        "id": "WTYsmZmhUW5K"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "RVG4sS68T-af"
+      },
+      "outputs": [],
       "source": [
         "class HammingCode:\n",
         "    \"\"\"\n",
@@ -555,66 +542,21 @@
         "        error = sum(int(check) * (2 ** i) for i, check in enumerate(check[::-1]))\n",
         "        print(\"Error in bit: \", error)\n",
         "        return ''.join(map(str, [int(x) for x in check]))"
-      ],
-      "metadata": {
-        "id": "RVG4sS68T-af"
-      },
-      "execution_count": 4,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "kEtFFEcSUN_g"
+      },
       "source": [
         "### Ausführung\n",
         "Die Klasse kann nun im Python Code verwendet werden.\n"
-      ],
-      "metadata": {
-        "id": "kEtFFEcSUN_g"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "\n",
-        "def main():\n",
-        "    k = 3\n",
-        "    hamming = HammingCode(k)\n",
-        "    print(\"Length: \", hamming.get_length())\n",
-        "    print(\"Payload: \", hamming.get_payload())\n",
-        "    print(\"Generator Matrix: \", hamming.get_generator_matrix())\n",
-        "    print(\"Check Matrix: \", hamming.get_check_matrix())\n",
-        "    print(\"Encoding Matrix: \", hamming.get_encoding_matrix())\n",
-        "\n",
-        "    for w in range(hamming.get_payload()**2):\n",
-        "        encode_decode(hamming, w)\n",
-        "\n",
-        "    # Hamminc Code with error:\n",
-        "    print(\"Hamming-Code with error\")\n",
-        "    codeword_with_error = \"0111011\"\n",
-        "    print(\"Codeword with error: \", codeword_with_error)\n",
-        "    hamming.check(codeword_with_error)\n",
-        "\n",
-        "     # Hamminc Code with error:\n",
-        "    print(\"Hamming-Code with error\")\n",
-        "    codeword_with_error = \"1100011\"\n",
-        "    print(\"Codeword with error: \", codeword_with_error)\n",
-        "    hamming.check(codeword_with_error)\n",
-        "\n",
-        "\n",
-        "def encode_decode(hamming, word):\n",
-        "    print(\"Word: \", word)\n",
-        "    encoded_word = hamming.encode(word)\n",
-        "    print(\"Encoded Word: \", encoded_word)\n",
-        "    check = hamming.check(encoded_word)\n",
-        "    print(\"Check Result: \", check)\n",
-        "    decoded_word = hamming.decode(encoded_word)\n",
-        "    print(\"Decoded Word: \", decoded_word)\n",
-        "\n",
-        "\n",
-        "if __name__ == '__main__':\n",
-        "    main()\n"
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -622,11 +564,10 @@
         "id": "XEzSX5C3UhcM",
         "outputId": "39045117-27ef-48c9-d183-2913d1f3274c"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Length:  7\n",
             "Payload:  4\n",
@@ -732,18 +673,92 @@
             "Error in bit:  0\n"
           ]
         }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def main():\n",
+        "    k = 3\n",
+        "    hamming = HammingCode(k)\n",
+        "    print(\"Length: \", hamming.get_length())\n",
+        "    print(\"Payload: \", hamming.get_payload())\n",
+        "    print(\"Generator Matrix: \", hamming.get_generator_matrix())\n",
+        "    print(\"Check Matrix: \", hamming.get_check_matrix())\n",
+        "    print(\"Encoding Matrix: \", hamming.get_encoding_matrix())\n",
+        "\n",
+        "    for w in range(hamming.get_payload()**2):\n",
+        "        encode_decode(hamming, w)\n",
+        "\n",
+        "    # Hamminc Code with error:\n",
+        "    print(\"Hamming-Code with error\")\n",
+        "    codeword_with_error = \"0111011\"\n",
+        "    print(\"Codeword with error: \", codeword_with_error)\n",
+        "    hamming.check(codeword_with_error)\n",
+        "\n",
+        "     # Hamminc Code with error:\n",
+        "    print(\"Hamming-Code with error\")\n",
+        "    codeword_with_error = \"1100011\"\n",
+        "    print(\"Codeword with error: \", codeword_with_error)\n",
+        "    hamming.check(codeword_with_error)\n",
+        "\n",
+        "\n",
+        "def encode_decode(hamming, word):\n",
+        "    print(\"Word: \", word)\n",
+        "    encoded_word = hamming.encode(word)\n",
+        "    print(\"Encoded Word: \", encoded_word)\n",
+        "    check = hamming.check(encoded_word)\n",
+        "    print(\"Check Result: \", check)\n",
+        "    decoded_word = hamming.decode(encoded_word)\n",
+        "    print(\"Decoded Word: \", decoded_word)\n",
+        "\n",
+        "\n",
+        "if __name__ == '__main__':\n",
+        "    main()\n"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "UqaLTlyasKAj"
+      },
       "source": [
         "## Literatur\n",
         "[Weitz. 2018. *Konkrete Mathematik (nicht nur) für Informatiker: mit vielen Grafiken und Algorithmen in Python*](zotero://select/items/_C9DWSI2S)\n",
         "[Teschl. 2013. *Mathematik für Informatiker: Band 1: Diskrete Mathematik und Lineare Algebra*](zotero://select/items/_85KJXNKN)"
-      ],
-      "metadata": {
-        "id": "UqaLTlyasKAj"
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyN5KSCOgMhkhCSAZDxMIbKh",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.13 ('base')",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "0eb5d0a65b500759bcde1c4c1ad0551eaece71d5bef76353acf57400c52edb49"
       }
     }
-  ]
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
