--- a/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
+++ b/linAlg_Codierungstheorie_Patrick_Mischler.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "## Einleitung in die Codierungstheorie\n",
         "\n",
-        "In einem alten Kinderspiel startet ein Kind damit, dass es einem anderen Kind eine Nachricht (ein Wort oder ein kurzer Satz) zuflüstert. Diese Nachricht wird dann von Kind zu Kind weitergegeben. Das letzte Kind in der Reihe gibt die zugeflüsterte Nachricht laut wieder. Oft mit dem Ergebnis das nicht genau das wiedergegeben, was das erste Kind weitergegeben hat. Es finden also bei der Übertragung Fehler statt. Übertragungsfehler können sich durch verschiedene Arten von Störungen auch beim elektronischen übertragen von Daten ergeben. So können beispielsweise elektromagnetische Störungen dazu führen das bei der Übertragung ein Bit-Fehler auftritt. Dabei wird eine 1 zu einer 0 oder Umgekehrt. \n",
+        "In einem alten Kinderspiel startet ein Kind damit, dass es einem anderen Kind eine Nachricht (ein Wort oder ein kurzer Satz) zuflüstert. Diese Nachricht wird dann von Kind zu Kind weitergegeben. Das letzte Kind in der Reihe gibt die zugeflüsterte Nachricht laut wieder. Oft mit dem Ergebnis das nicht genau das wiedergegeben wird, was das erste Kind weitergegeben hat. Es finden also bei der Übertragung Fehler statt. Übertragungsfehler können sich durch verschiedene Arten von Störungen auch beim elektronischen übertragen von Daten ergeben. So können beispielsweise elektromagnetische Störungen dazu führen das bei der Übertragung ein Bit-Fehler auftritt. Dabei wird eine 1 zu einer 0 oder Umgekehrt. \n",
         "Hinter der Codierungstheorie steht die Idee, dass Fehler bei der Übermittlung von Daten erkannt und sogar korrigiert werden können. Eine einfache jedoch nicht gerade effiziente Methode wäre es, eine Nachricht mehrmals zu übertragen und dann jeweils gegeneinander zu prüfen. Somit wäre sichergestellt, dass Fehler zumindest erkannt werden könnten. Allerdings ist die Fehlererkennung eingeschränkt. Betrachten wir ein Beispiel, bei dem die Nachricht 3-mal übertragen wird.\n",
         "\n",
         "1. > Lorem ipsum dolor\n",
@@ -43,8 +43,8 @@
         "2. > Lorem *a*psum dolor\n",
         "3. > Lorem ipsum dolor\n",
         "\n",
-        "Würde *ipsum* fälschlicherwe als Fehler identifiziert, da die beiden *apsum* ja in der Überzahl sind. \n",
-        "Zudem wird hier die 3-fache Datenmenge übertragen, was dieses Verfahren nicht gerade effizient macht. \n",
+        "Würde *ipsum* fälschlicherwe als Fehler identifiziert, da die beiden *apsum* in der Überzahl sind. \n",
+        "Zudem wird hier die 3-fache Datenmenge übertragen, was dieses Verfahren nicht sehr effizient macht. \n",
         "\n",
         "Der amerikanische Mathematiker *Richard W. Hamming* hat für diesen Zweck eine einfache und doch effiziente Methode entwickelt welche *Hamming-Code* genannt wird. Der Einsatz reicht von der Fehlerprüfung bei der Datenübertragung im Netzwerk bis zu der Fehlererkennung in ECC-Speicherchips."
       ]
@@ -56,7 +56,19 @@
       },
       "source": [
         "## Theorieteil\n",
-        "In diesem kurzen Theoriteil werden die wichtigsten Grundlagen zu *Hemming-Codes* beschrieben. Der *Hamming-Code* bezieht sich auf Binärziffern. Das bedeutet, wir bewegen uns um Körper $\\mathbb{Z}_2$ [[Weitz. 2018.]](zotero://select/items/_C9DWSI2S). Besteht ein Datenpaket nun aus 7 Zeichen, müssen 3 davon für das Prüfen und korrigieren verwendet werden, damit der Code funktioniert. Das Verhältnis von Nutzlast zu der Menge der übertragenen Daten ist bei diesem Beispiel eher schlecht. Allerdings verbessert sich das Verhältnis mit zunehmender Anzahl Zeichen (Bits), welche in einem Paket übermittelt werden.\n",
+        "Der *Hamming-Code* gehört zu den linearen Codes und bezieht sich auf Binärziffern. Das bedeutet, wir bewegen uns um Körper $\\mathbb{Z}_2$ [[Weitz. 2018.]](zotero://select/items/_C9DWSI2S) . Dabei bezieht sich der Begriff *Hamming-Code* auf einen Code mit einer Prüfmatrix $(E|B)$ mit der Form $(m \\times (2^m -1))$ [[Socher. 2022.]](zotero://select/items/_QGF4J2P6). \n",
+        "Der *Hamming-Code* kann in verschiedenen Längen implementiert werden. *Hamming-Codes* weisen einen *Hamming-Abstand* von 3 auf. Dies bedeutet, dass sich die Codewörter um mindestens 3 Bit unterschieden müssen. Damit lassen sich bis zu zwei Bitfehler in einem Code erkennen, aber nur ein Bitfehler kann korrigiert werden. Beim erweiterten *Hamming-Code* mit einem *Hamming-Abstand* von 4, können mit hilfe eines zusätzlichen Paritätsbit bis zu drei Bitfehler erkennen, jedoch kann auch nur ein Fehler korrigiert werden [Hamming Code 2020.](zotero://select/items/_8C9CJA2Z). Ein *Hamming-Code* ist somit durch seine Länge $N$, die Anzahl Paritätsbits $k$, den *Hamming-Abstand* $d$ und die Anzahl Datenbits $n$ bestimmt. Dies ergiebt einen sogenannten $N$-$k$-$d$-Code, wobei man bei der Bezeichnung eines *Hamming-Codes* meistens nur die Gesamtlänge $N$ und die Anzahl Datenbits $n$, Gesamtlänge abzüglich der Prüfbits, als Bezeichnung verwendet werden.\n",
+        "\n",
+        "$$\n",
+        "\\begin{aligned}\n",
+        "N &= 2^k - 1 = \\text{Gesamtlänge} \\\\\n",
+        "k &= ~ \\text{Paritätsbits} \\\\\n",
+        "d &= ~\\text{Hamming-Abstand} \\\\\n",
+        "n &= 2^k-k-1 = \\text{Datenbits} \\\\\n",
+        "\\end{aligned}\n",
+        "$$\n",
+        "\n",
+        "Besteht ein Datenpaket nun aus 7 Zeichen, müssen 3 davon für das Prüfen und korrigieren verwendet werden, damit der Code funktioniert. Als $N$-$k$-$d$-Code wird dies als $[7,4,3]$-Code bezeichnet. Für den *Hamming-Code* schreibt man $(7,4)$-*Hamming-Code*. Das Verhältnis von Nutzlast zu der Menge der übertragenen Daten ist bei diesem Beispiel eher schlecht. Allerdings verbessert sich das Verhältnis mit zunehmender Anzahl Zeichen (Bits), welche in einem Paket übermittelt werden.\n",
         "\n",
         "Prinzip: Wird ein Vektor bestehend aus 0 und 1 mit einem Vektor bestehend aus \"nur\" 1 multipliziert, erhält man Anzahl 1 in v.\n",
         "\n",
@@ -130,7 +142,7 @@
         "\\end{pmatrix}\n",
         "$$\n",
         "\n",
-        "Die Einheitsmatrix $I$ wird nun mit den Vektoren ergänzt, die bei der Multiplikation mit dem zu codierenden Wort bei einer geraden Anzahl einer $1$ eine $0$ und bei ungerader Anzahl $1$ eine $0$ ergiebt. Das Egebnis ist eine Generatormatrix $G_4$:\n",
+        "Die Einheitsmatrix $I$ wird nun mit den Vektoren ergänzt, die bei der Multiplikation mit dem zu codierenden Wort bei einer geraden Anzahl Einsen eine $0$ und bei ungerader Anzahl Einsen eine $0$ ergiebt. Das Egebnis ist eine Generatormatrix $G_4$:\n",
         "\n",
         "$$\n",
         "G_4 = \n",
@@ -145,7 +157,7 @@
         "\\end{pmatrix}\n",
         "$$\n",
         "\n",
-        "Wid nun die Generatormatrix beispielsweise mit dem *Null-Wort* $a = (0, 0, 0, 0)^T$ multipliziert, ist die Anzahl $1$ ungerade und somit die sogenannten **Paritätsbits** gleich $0$.\n",
+        "Wid nun die Generatormatrix beispielsweise mit dem *Null-Wort* $a = (0, 0, 0, 0)^T$ multipliziert, ist die Anzahl Einsen ungerade und somit die sogenannten **Paritätsbits** gleich $0$.\n",
         "\n",
         "$$\n",
         "C = G \\cdot a = \n",
@@ -195,7 +207,119 @@
         "\n",
         "G = np.array([[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1], [1, 0, 1, 1], [1, 1, 0, 1], [0, 1, 1, 1]])\n",
         "a = np.array([0, 0, 0, 0])\n",
-        "print(np.matmul(G, a))"
+        "result = np.matmul(G, a)\n",
+        "result[result % 2 == 0] = 0\n",
+        "print(result)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Für ein gültiges Codewort beispielsweis $b=(0,0,0,1)^T$  ergibt sich eine gerade Anzahl von Einsen. \n",
+        "\n",
+        "$$\n",
+        "C = G \\cdot b = \n",
+        "\\begin{pmatrix}\n",
+        "1 & 0 & 0 & 0 \\\\\n",
+        "0 & 1 & 0 & 0 \\\\\n",
+        "0 & 0 & 1 & 0 \\\\\n",
+        "0 & 0 & 0 & 1 \\\\\n",
+        "\\color{green}1 & \\color{green}0 & \\color{green}1 & \\color{green}1 \\\\\n",
+        "\\color{red}1 & \\color{red}1 & \\color{red}0 & \\color{red}1 \\\\\n",
+        "\\color{pink}0 & \\color{pink}1 & \\color{pink}1 & \\color{pink}1\n",
+        "\\end{pmatrix} \n",
+        "\\cdot\n",
+        "\\begin{bmatrix}\n",
+        "0 \\\\\n",
+        "0 \\\\\n",
+        "0 \\\\\n",
+        "1\n",
+        "\\end{bmatrix}\n",
+        "= (0,0,0,1,1,1,1)^T\n",
+        "$$\n",
+        "\n",
+        "Auch dies lässt sich mit Hilfe von Python einfach berechnen:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0 0 0 1 1 1 1]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "G = np.array([[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1], [1, 0, 1, 1], [1, 1, 0, 1], [0, 1, 1, 1]])\n",
+        "b = np.array([0, 0, 0, 1])\n",
+        "result = np.where(np.matmul(G, b) % 2 == 0, 0, 1)\n",
+        "print(result)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Wird die Generatormatrix $G$ mit einem ungültigen Codewort $c = (0,0,1,1)$ multipliziert, ergeben sich eine ungerade Anzahl von Einsen:\n",
+        "\n",
+        "$$\n",
+        "C = G \\cdot c = \n",
+        "\\begin{pmatrix}\n",
+        "1 & 0 & 0 & 0 \\\\\n",
+        "0 & 1 & 0 & 0 \\\\\n",
+        "0 & 0 & 1 & 0 \\\\\n",
+        "0 & 0 & 0 & 1 \\\\\n",
+        "\\color{green}1 & \\color{green}0 & \\color{green}1 & \\color{green}1 \\\\\n",
+        "\\color{red}1 & \\color{red}1 & \\color{red}0 & \\color{red}1 \\\\\n",
+        "\\color{pink}0 & \\color{pink}1 & \\color{pink}1 & \\color{pink}1\n",
+        "\\end{pmatrix} \n",
+        "\\cdot\n",
+        "\\begin{bmatrix}\n",
+        "0 \\\\\n",
+        "0 \\\\\n",
+        "1 \\\\\n",
+        "1\n",
+        "\\end{bmatrix}\n",
+        "= (0,0,1,1,0,1,0)^T\n",
+        "$$\n",
+        "\n",
+        "Auch dieses Beispiel lässt sich mit Python nachvollziehen:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0 0 1 1 0 1 0]\n",
+            "[1 0 1 1 1 0 0]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "G = np.array([[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1], [1, 0, 1, 1], [1, 1, 0, 1], [0, 1, 1, 1]])\n",
+        "c = np.array([0, 0, 1, 1])\n",
+        "result = np.matmul(G, c)\n",
+        "result[result % 2 == 0] = 0\n",
+        "print(result)\n",
+        "\n",
+        "c2 = np.array([1, 0, 1, 1])\n",
+        "result = np.where(np.matmul(G, c2) % 2 == 0, 0, 1)\n",
+        "print(result)"
       ]
     },
     {
@@ -255,12 +379,17 @@
         "\\end{bmatrix}\n",
         "$$\n",
         "\n",
-        "Auch das lässt sich wieder mit Python nacvollziehen. Wobei wir wieder beachten müssen, dass eine ungerade Zahl für $0$ steht und eine gerade Zahl für $1$."
+        "Auch das lässt sich wieder mit Python nacvollziehen."
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -273,7 +402,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[1 3 3]\n"
+            "[0 0 0]\n"
           ]
         }
       ],
@@ -282,7 +411,8 @@
         "\n",
         "H4 = np.array([[1, 0, 1, 1, 1, 0, 0], [1, 1, 0, 1, 0, 1, 0], [0, 1, 1, 1, 0, 0, 1]])\n",
         "C = np.array([0, 1, 0, 1, 0, 1, 1])\n",
-        "print(np.matmul(H4, C))"
+        "result = np.where(np.matmul(H4, C) % 2 == 0, 1, 0)\n",
+        "print(result)"
       ]
     },
     {
@@ -303,27 +433,27 @@
         "\\cdot\n",
         "\\begin{pmatrix}\n",
         "0 \\\\\n",
-        "1 \\\\\n",
         "\\color{red}1 \\\\\n",
         "1 \\\\\n",
+        "0 \\\\\n",
         "0 \\\\\n",
         "1 \\\\\n",
         "1 \\\\\n",
         "\\end{pmatrix}\n",
         "=\n",
         "\\begin{bmatrix}\n",
-        "0 \\\\\n",
+        "1 \\\\\n",
         "1 \\\\\n",
         "0\n",
         "\\end{bmatrix}\n",
         "$$\n",
         "\n",
-        "Und wieder die entsprechende Berechnung in Python unter berücksichtigung der vorher genannten Bedingung, dass eine ungerade Zahl für $0$ steht und eine gerade Zahl für $1$."
+        "Und wieder die entsprechende Berechnung in Python."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -336,7 +466,8 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "[2 3 4]\n"
+            "[0 0 1]\n",
+            "[0 0 0]\n"
           ]
         }
       ],
@@ -344,8 +475,13 @@
         "import numpy as np\n",
         "\n",
         "H4 = np.array([[1, 0, 1, 1, 1, 0, 0], [1, 1, 0, 1, 0, 1, 0], [0, 1, 1, 1, 0, 0, 1]])\n",
-        "Cf = np.array([0, 1, 1, 1, 0, 1, 1])\n",
-        "print(np.matmul(H4, Cf))"
+        "Cf = np.array([0, 0, 1, 1, 0, 1, 1])\n",
+        "result = np.where(np.matmul(H4, Cf) % 2 == 0, 0, 1)\n",
+        "print(result)\n",
+        "\n",
+        "Cf2 = np.array([1, 0, 1, 1, 1, 0, 0])\n",
+        "result = np.where(np.matmul(H4, Cf2) % 2 == 0, 0, 1)\n",
+        "print(result)"
       ]
     },
     {
@@ -383,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "id": "RVG4sS68T-af"
       },
@@ -556,7 +692,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -724,7 +860,12 @@
       "source": [
         "## Literatur\n",
         "[Weitz. 2018. *Konkrete Mathematik (nicht nur) für Informatiker: mit vielen Grafiken und Algorithmen in Python*](zotero://select/items/_C9DWSI2S)\n",
-        "[Teschl. 2013. *Mathematik für Informatiker: Band 1: Diskrete Mathematik und Lineare Algebra*](zotero://select/items/_85KJXNKN)"
+        "\n",
+        "[Teschl. 2013. *Mathematik für Informatiker: Band 1: Diskrete Mathematik und Lineare Algebra*](zotero://select/items/_85KJXNKN)\n",
+        "\n",
+        "[Socher. 2022. *Mathematik für Informatiker: diskrete Mathematik, lineare Algebra und Wahrscheinlichkeitsrechnung*](zotero://select/items/_QGF4J2P6)\n",
+        "\n",
+        "[2020. * Wikipedia: Hamming-Code*](zotero://select/items/_8C9CJA2Z)"
       ]
     }
   ],
@@ -737,7 +878,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3.9.13 ('base')",
+      "display_name": "Python 3.10.6 ('.venv': venv)",
       "language": "python",
       "name": "python3"
     },
@@ -751,11 +892,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.10.6"
     },
     "vscode": {
       "interpreter": {
-        "hash": "0eb5d0a65b500759bcde1c4c1ad0551eaece71d5bef76353acf57400c52edb49"
+        "hash": "4df1b6a76f181d946d9f21b9bc17916943543fd2ea538bba1b60436507cc8f97"
       }
     }
   },
